# smart-ai-browse-assistant

./: README.md
backend/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test_api.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  analyze.py  chat.py  compare.py  summarize.py
backend/app/models/: __init__.py  prompts.py  schemas.py
backend/app/services/: __init__.py  llm_service.py  product_extractor.py  scraper.py  summarizer.py
backend/tests/: test_api.py
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  generate_icons.py
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  scraper.rs
desktop/src/components/: ChatPanel.tsx  ComparePanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  SummaryPanel.tsx  UrlInput.tsx
desktop/src/lib/: api.ts  store.ts
desktop/src/styles/: globals.css
desktop/src/types/: index.ts
docs/: API.md  SETUP.md
extension/: manifest.chrome.json  manifest.firefox.json  manifest.safari.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
extension/src/background/: index.ts
extension/src/content/: extractor.ts
extension/src/popup/: App.tsx  index.html
extension/src/popup/components/: ChatWindow.tsx  ProductComparison.tsx  Settings.tsx  SummaryCard.tsx
extension/src/popup/hooks/: useChat.ts  usePageContent.ts
extension/src/shared/: api.ts  storage.ts  types.ts
extension/src/sidepanel/: index.html  main.tsx
extension/src/styles/: globals.css
