[package]
name = "smart-browse-assistant"
version = "1.0.0"
description = "AI-powered desktop app for webpage summaries and product comparisons"
authors = ["Smart Browse Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "smart_browse_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.18"
url = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
